--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -1116,3 +1116,24 @@ DOI: 10.1007/11840541_68},
   urldate = {2025-04-21},
   isbn = {978-1-108-59103-4 978-1-108-47368-2}
 }
+@online{michaelbetancourtProbabilityTheoryScientists2018,
+  title = {Probability {{Theory}} ({{For Scientists}} and {{Engineers}})},
+  author = {{Michael Betancourt}},
+  date = {2018-10},
+  url = {https://betanalpha.github.io/assets/case_studies/probability_theory.html},
+  urldate = {2025-04-23}
+}
+@book{follandRealAnalysisModern1999,
+  title = {Real Analysis: Modern Techniques and Their Applications},
+  shorttitle = {Real Analysis},
+  author = {Folland, G. B.},
+  date = {1999},
+  series = {Pure and Applied Mathematics},
+  edition = {2nd ed},
+  publisher = {Wiley},
+  location = {New York},
+  isbn = {978-0-471-31716-6},
+  langid = {english},
+  pagetotal = {386},
+  keywords = {Functions of real variables,Mathematical analysis}
+}
