add functions illustration

--- a/src/content/docs/en/functions.mdx
+++ b/src/content/docs/en/functions.mdx
@@ -65,11 +65,30 @@ Notation has not yet been introduced but it allows to represent this mapping/rel
     description=""
 />
 
-<FunctionMappingExample/>
+<FunctionMappingExample
+description=""
+/>
 
-As you can see this representation is a bit difficult to interpret, so it is common to represent it as follows, where the horizontal axis is the domain and the vertial axis is the codomain.
+As you can see this representation is a bit difficult to interpret, so it is common to represent the horizontal axis as the domain and the vertial axis the codomain.
 
-<FunctionExample/>
+<FunctionExample
+description=""
+/>
+
+If we say that a function is a mapping from a space (domain) to another space (codomain):
+
+<Equation
+    formula="f: \sX \rightarrow \sY"
+    description="A function is just a mapping"
+/>
+
+We can generalize this idea to sets.
+
+<Drawio
+    file="functions.drawio"
+    page="1"
+    description="Visual intuition of a function on sets."
+/>
 
 ## Notation
 
