--- a/src/content/docs/en/functions.mdx
+++ b/src/content/docs/en/functions.mdx
@@ -90,6 +90,7 @@ We can generalize this idea to sets.
     description="Visual intuition of a function on sets."
 />
 
+
 ## Notation
 
 |                     | Notation                 |
@@ -102,6 +103,12 @@ We can generalize this idea to sets.
 ## Preimage
 
 The **preimage** or also called **inverse image**.
+
+<Drawio
+    file="functions.drawio"
+    page="2"
+    description="Visual intuition of a function applied in reverse mapping."
+/>
 
 
 ## External Resources
