--- a/src/content/docs/en/cpp.mdx
+++ b/src/content/docs/en/cpp.mdx
@@ -28,3 +28,7 @@ Software requirements:
 ## Module 3 - Extras
 
 - [Executable and Linking Format (ELF)](elf)
+
+Memory unsafe languages:
+- How linux can be safe using C: [How Linux is built with Greg Kroah-Hartman](https://youtu.be/7WbREHtc5sU?t=4089)
+- NASA/JPL  using C for safety critical systems: [The Power of Ten – Rules for Developing Safety Critical Code](https://spinroot.com/gerard/pdf/P10.pdf)
