updates on simulators

--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -1137,3 +1137,16 @@ DOI: 10.1007/11840541_68},
   pagetotal = {386},
   keywords = {Functions of real variables,Mathematical analysis}
 }
+@article{newburyReviewDifferentiableSimulators2024,
+  title = {A {{Review}} of {{Differentiable Simulators}}},
+  author = {Newbury, Rhys and Collins, Jack and He, Kerry and Pan, Jiahe and Posner, Ingmar and Howard, David and Cosgun, Akansel},
+  date = {2024},
+  journaltitle = {IEEE Access},
+  shortjournal = {IEEE Access},
+  volume = {12},
+  pages = {97581--97604},
+  issn = {2169-3536},
+  doi = {10.1109/ACCESS.2024.3425448},
+  url = {https://ieeexplore.ieee.org/document/10589638/},
+  urldate = {2025-04-27}
+}
